--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -5,10 +5,11 @@
 
     <dimen name="twice_scale">2</dimen>
     <dimen name="text_subtitle">17dp</dimen>
+    <dimen name="poi_detail_element_size">20dp</dimen>
 
     <!-- MARGINS -->
 
-    <dimen name="base_margin">14dp</dimen>
+    <dimen name="base_margin">15dp</dimen>
 
     <!-- PADDINGS -->
     <dimen name="window_padding">5dp</dimen>
