--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,43 +23,35 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:padding="@dimen/window_padding"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- /!\ REMOVE layout_height PROPERTY WHEN REAL LOGO -->
-            <ImageView
-                android:id="@+id/login_image_logo"
-                android:layout_width="match_parent"
-                android:layout_height="125dp"
-                android:layout_marginTop="@dimen/base_margin"
-                android:background="@color/colorSecondaryOrange" />
-
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimaryBlack"
+                android:layout_height="150dp"
                 android:layout_marginTop="@dimen/base_margin"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:text="@string/logo_subtitle"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
                 android:textSize="@dimen/text_subtitle"
-                android:text="@string/logo_subtitle"/>
+                android:textStyle="bold" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="140dp">
+                android:layout_marginTop="150dp">
 
                 <Button
-                    android:padding="15dp"
                     android:id="@+id/login_start_button"
                     android:drawableTint="@color/colorSecondaryWhite"
-                    android:layout_width="220dp"
-                    android:layout_height="120dp"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
                     android:layout_centerInParent="true"
                     android:text="@string/start_button_text"
                     android:backgroundTint="@color/colorPrimary"
-                    android:drawableTop="@drawable/ic_navigation_black_24dp"
+                    android:drawableRight="@drawable/ic_navigation_black_24dp"
                     android:textColor="@color/colorSecondaryWhite"
                     android:textStyle="bold"
                     android:gravity="center"/>
