--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -7,15 +7,20 @@
     tools:context=".PoiDetailActivity"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
         <ImageView
             android:id="@+id/poi_detail_img"
+            tools:src="@drawable/mapbox_info_icon_default"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            tools:src="@drawable/circle_loader"/>
+            android:layout_height="350dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -67,25 +72,68 @@
             android:background="@drawable/shaddow_shape"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/poi_detail_name"
-                style="@style/PoiDetails"
-                android:drawableLeft="@drawable/ic_my_location_black_24dp"
-                android:text="@string/default_value"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1">
 
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
+                    android:tint="@color/colorSecondaryOrange"
+                    android:src="@drawable/ic_my_location_black_24dp"/>
 
-            <TextView
-                android:id="@+id/poi_detail_desc"
-                style="@style/PoiDetails"
-                android:drawableLeft="@drawable/ic_description_black_24dp"
-                android:text="@string/default_value"/>
+                <TextView
+                    android:id="@+id/poi_detail_name"
+                    style="@style/PoiDetails"
+                    android:layout_gravity="center"
+                    android:text="@string/default_value"/>
 
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/poi_detail_coords"
-                style="@style/PoiDetails"
-                android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
-                android:text="@string/default_value"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
+                    android:tint="@color/colorSecondaryOrange"
+                    android:src="@drawable/ic_description_black_24dp"/>
+
+                <TextView
+                    android:id="@+id/poi_detail_desc"
+                    style="@style/PoiDetails"
+                    android:layout_gravity="center"
+                    android:text="@string/default_value"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
+                    android:tint="@color/colorSecondaryOrange"
+                    android:src="@drawable/ic_pin_drop_black_24dp"/>
+
+                <TextView
+                    android:id="@+id/poi_detail_coords"
+                    style="@style/PoiDetails"
+                    android:layout_gravity="center"
+                    android:text="@string/default_value"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
