--- a/app/src/main/res/layout/activity_poi_list.xml
+++ b/app/src/main/res/layout/activity_poi_list.xml
@@ -24,7 +24,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="15dp">
 
             <Button
                 android:id="@+id/poi_list_navigate_button"
