--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -14,6 +14,7 @@
 
 
         <android.support.v7.widget.AppCompatCheckBox
+            android:id="@+id/task_item_checked"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"/>
