--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -16,11 +16,12 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/task_list_add_task_btn"
-        android:layout_width="39dp"
-        android:layout_height="39dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_add_black_24dp"
         android:tint="@color/colorWhite"
         android:layout_margin="16dp"
+        app:fabSize="normal"
         android:layout_gravity="bottom|end"   />
 
 </android.support.design.widget.CoordinatorLayout>
