--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -14,11 +14,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="350dp">
 
         <ImageView
             android:id="@+id/poi_detail_img"
-            tools:src="@drawable/mapbox_info_icon_default"
+            tools:src="@drawable/ic_autorenew_black_24dp"
             android:layout_width="match_parent"
             android:layout_height="350dp"/>
     </LinearLayout>
@@ -26,114 +26,139 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:padding="@dimen/base_margin"
+        android:layout_marginTop="200dp"
         android:orientation="vertical">
+
+        <!-- KEEP LAYOUTS IT'LL BE USED FURTHER -->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:orientation="horizontal"
-            android:background="@drawable/shaddow_shape">
+            android:layout_margin="@dimen/base_margin"
+            android:background="@android:color/transparent">
 
-            <Button
-                android:id="@+id/poi_detail_map_btn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_weight="1"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:background="@drawable/shaddow_shape"
-                android:text="Map"/>
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/poi_detail_add_btn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:background="@drawable/shaddow_shape"
-                android:layout_weight="1"
-                android:text="Add Spot"/>
+                <Button
+                    android:id="@+id/poi_detail_map_btn"
+                    style="@style/PoiDetailButton"
+                    android:drawableTop="@drawable/ic_map_black_24dp"
+                    android:text="Map"/>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/poi_detail_list_btn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:background="@drawable/shaddow_shape"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_weight="1"
-                android:text="Spot List"/>
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/poi_detail_add_btn"
+                    style="@style/PoiDetailButton"
+                    android:drawableTop="@drawable/ic_add_black_24dp"
+                    android:text="Add Move"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/poi_detail_list_btn"
+                    style="@style/PoiDetailButton"
+                    android:drawableTop="@drawable/ic_sms_failed_black_24dp"
+                    android:text="Move List"/>
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/base_margin"
             android:padding="@dimen/base_margin"
             android:background="@drawable/shaddow_shape"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="15dp"
-                    android:tint="@color/colorSecondaryOrange"
-                    android:src="@drawable/ic_my_location_black_24dp"/>
-
-                <TextView
-                    android:id="@+id/poi_detail_name"
-                    style="@style/PoiDetails"
-                    android:layout_gravity="center"
-                    android:text="@string/default_value"/>
-
-            </LinearLayout>
+                android:layout_width="match_parent"
+                android:id="@+id/poi_detail_name"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textSize="32dp"
+                android:text="@string/default_value"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_marginTop="@dimen/base_margin"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="15dp"
                     android:tint="@color/colorSecondaryOrange"
                     android:src="@drawable/ic_description_black_24dp"/>
 
                 <TextView
-                    android:id="@+id/poi_detail_desc"
-                    style="@style/PoiDetails"
-                    android:layout_gravity="center"
-                    android:text="@string/default_value"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_subtitle"
+                    android:textStyle="bold"
+                    android:text="Description:"/>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/poi_detail_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:textSize="19dp"
+                android:layout_marginLeft="25dp"
+                android:text="@string/default_value"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_marginTop="@dimen/base_margin"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
                     android:layout_marginRight="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:tint="@color/colorSecondaryOrange"
                     android:src="@drawable/ic_pin_drop_black_24dp"/>
 
                 <TextView
-                    android:id="@+id/poi_detail_coords"
-                    style="@style/PoiDetails"
-                    android:layout_gravity="center"
-                    android:text="@string/default_value"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_subtitle"
+                    android:textStyle="bold"
+                    android:text="Coordinates:"/>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/poi_detail_coords"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="25dp"
+                android:textSize="19dp"
+                android:text="@string/default_value"/>
 
         </LinearLayout>
 
