--- a/app/src/main/res/layout/poi_list_item.xml
+++ b/app/src/main/res/layout/poi_list_item.xml
@@ -12,14 +12,14 @@
         android:layout_marginRight="15dp"
         android:orientation="horizontal"
         android:layout_marginBottom="@dimen/base_margin"
-        android:padding="@dimen/item_padding"
-        android:background="@color/colorPrimaryDark"
+        android:padding="12dp"
+        android:background="@drawable/shaddow_shape"
         android:layout_height="100dp">
 
         <ImageView
             android:layout_width="80dp"
             android:layout_height="match_parent"
-            android:tint="@color/colorSecondaryWhite"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/ic_my_location_black_24dp"/>
 
         <LinearLayout
@@ -33,19 +33,19 @@
                 android:id="@+id/poi_item_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/colorSecondaryWhite"
+                android:textColor="@color/colorSecondaryOrange"
                 android:textStyle="bold"
                 android:layout_weight="2"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:text="Default Name"/>
 
             <TextView
                 android:id="@+id/poi_item_desc"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorPrimary"
                 android:layout_weight="1.5"
-                android:textSize="12dp"
+                android:textSize="10dp"
                 android:text="Une super description ama"/>
         </LinearLayout>
 
@@ -53,7 +53,7 @@
             android:orientation="vertical"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_width="75dp"
+            android:layout_width="45dp"
             android:layout_height="match_parent">
 
             <TextView
@@ -61,13 +61,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:textColor="@color/colorSecondaryWhite"
+                android:textColor="@color/colorPrimary"
                 android:layout_weight="1"
                 android:text="Lat: -44.0"/>
 
             <android.support.v4.widget.ContentLoadingProgressBar
                 android:layout_width="match_parent"
-                android:background="@color/colorSecondaryWhite"
+                android:background="@color/colorSecondaryOrange"
                 android:layout_height="2dp" />
 
             <TextView
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:textColor="@color/colorSecondaryWhite"
+                android:textColor="@color/colorPrimary"
                 android:layout_weight="1"
                 android:text="Lng: -180.0"/>
         </LinearLayout>
