--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,11 +25,13 @@
                 android:layout_marginTop="@dimen/text_subtitle"
                 />
 
-            <ImageView
+            <ImageButton
+                android:id="@+id/logo_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="60dp"
                 android:layout_marginTop="60dp"
+                android:backgroundTint="@android:color/transparent"
                 android:src="@drawable/ic_buddy"/>
 
             <TextView
