--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -12,16 +12,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="350dp">
 
+        <TextView
+            android:id="@+id/text_loader"
+            android:layout_marginTop="@dimen/base_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="@dimen/text_large"
+            android:text="@string/loading"/>
+
+        <ImageView
+            android:id="@+id/img_loading"
+            android:layout_width="match_parent"
+            android:layout_below="@id/text_loader"
+            android:layout_height="70dp"
+            android:tint="@color/colorPrimaryDark"
+            android:src="@drawable/ic_autorenew_black_24dp"/>
+
         <ImageView
             android:id="@+id/poi_detail_img"
-            tools:src="@drawable/ic_autorenew_black_24dp"
             android:layout_width="match_parent"
-            android:layout_height="350dp"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            tools:ignore="ContentDescription" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -161,7 +179,6 @@
                 android:text="@string/default_value"/>
 
         </LinearLayout>
-
     </LinearLayout>
 
 </RelativeLayout>
